fix: header and drawer overlap

--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -101,7 +101,7 @@
 
   --z-negative: -1; // to hide something behind everything else
   --z-elevate: 1; // to elevate something, just a little, in relation to its sibling
-  --z-sticky: 100; // header, mobile actions bar
+  --z-sticky: 250; // header, mobile actions bar
   --z-drawer: 200; // sidebar sliding nav drawers
   --z-modal: 300; // modals ¯\_(ツ)_/¯
   --z-dropdown: 400; // all kinds of dropdowns
